--- a/.github/workflows/terraform-job.yml
+++ b/.github/workflows/terraform-job.yml
@@ -61,3 +61,14 @@ jobs:
         uses: triat/terraform-security-scan@v3.0.3
         with:
           tfsec_actions_comment: false
+  
+  tfdocs:
+    name: TFDocs
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@master
+      - name: TFDocs
+        uses: terraform-docs/gh-actions@v1.0.0
+        with:
+          working-dir: ./
+          fail-on-diff: true
