--- a/.github/workflows/terraform-job.yml
+++ b/.github/workflows/terraform-job.yml
@@ -62,13 +62,13 @@ jobs:
         with:
           tfsec_actions_comment: false
   
-  tfdocs:
-    name: TFDocs
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@master
-      - name: TFDocs
-        uses: terraform-docs/gh-actions@v1.0.0
-        with:
-          working-dir: ./
-          fail-on-diff: true
+  # tfdocs:
+  #   name: TFDocs
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - name: TFDocs
+  #       uses: terraform-docs/gh-actions@v1.0.0
+  #       with:
+  #         working-dir: ./
+  #         fail-on-diff: true
