python-job: add default for working-directory

--- a/.github/workflows/python-job.yml
+++ b/.github/workflows/python-job.yml
@@ -12,6 +12,7 @@ on:
       working-directory:
         required: false
         type: string
+        default: "./"
       test-directory:
         required: false
         type: string
