--- a/.github/workflows/python-job.yml
+++ b/.github/workflows/python-job.yml
@@ -37,15 +37,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pylint pep8 pytest
-      - name: Analysing the code with pylint
-        continue-on-error: false    
+          pip install ruff pytest
+      - name: Analysing the code with ruff
+        continue-on-error: false
         run: |
-          pylint --max-line-length=120 $(git ls-files '*.py')
-      - name: Analysing the code with pep8
-        continue-on-error: false      
-        run: |
-          pep8 --max-line-length=120$(git ls-files '*.py')  
+          ruff $(git ls-files '*.py') 
       - name: Test with pytest
         continue-on-error: false
         # Note: pytest will only automatically discover and run tests in files 
