--- a/.github/workflows/terraform-job.yml
+++ b/.github/workflows/terraform-job.yml
@@ -10,6 +10,10 @@ on:
         required: false
         type: string
         default: "eu-central-1"
+      terraform-commands-directory:
+        required: false
+        type: string
+        default: ""
       tf-lint-continue-on-error:
         required: false
         type: boolean
@@ -66,8 +70,12 @@ jobs:
       - uses: actions/checkout@master
       - name: terraform validate
         run: |
-          terraform init
-          terraform validate -no-color
+          dir_option=""
+          if [ -n "${{ inputs.terraform-commands-directory }}" ]; then
+            dir_option="-chdir=${{ inputs.terraform-commands-directory }}"
+          fi
+          terraform $dir_option init
+          terraform $dir_option validate -no-color
         env:
           AWS_DEFAULT_REGION: ${{ inputs.aws-default-region }}
 
